Actualización Angular-Data-Grid
Se actualiza la grilla de datos de personas

--- a/app-web/views/person/addPerson.html
+++ b/app-web/views/person/addPerson.html
@@ -9,7 +9,7 @@
                 <ol class="breadcrumb">
                     <li>
                         <i class="fa fa-dashboard"></i>  
-                        <a ng-href="#/">Dashboard</a>
+                        <a ng-href="#/">Add Person</a>
                     </li>
                     <li class="active">
                         <i class="fa fa-edit"></i> Add Person
