--- a/app-web/views/person/addPerson.html
+++ b/app-web/views/person/addPerson.html
@@ -18,19 +18,6 @@
             </div>
         </div>
         
-        <!-- Alert -->
-        <div class="alert alert-info alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <strong>Info!</strong> Please insert info into form fields!!!
-        </div>
-        
-        <!-- Progress Bar -->
-        <div class="progress">
-            <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-                <span class="sr-only">45% Complete</span>
-            </div>
-        </div>
-        
         <!-- Controller -->
         <div class="row" ng-controller="AddPersonCtrl">
             
@@ -86,7 +73,7 @@
                             <div class="input-group-addon">
                                 <i class="glyphicon glyphicon-plus-sign"></i>
                             </div>
-                            <input class="form-control" name="edad" type="text" placeholder="Nombre" ng-model="Person.edad">
+                            <input class="form-control" name="edad" type="text" placeholder="Edad" ng-model="Person.edad">
                         </div>
                         <p class="help-block">Digite su edad</p>
                     </div>
